--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.10",
@@ -50,6 +51,7 @@
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -59,6 +61,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
@@ -73,5 +76,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
